# QuickStart

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
app/QuickStart.app/Contents/: Info.plist
gui/: GitignoreGenerator.py  Settings.py  about_widget.py  jsonformatvalidator.py  new_project_window.py  readme_generator_gui.py  readme_template.py  singleton_constants.py
quickstart/: __init__.py  cli.py  project_initializer.py
quickstart/cli/: __init__.py  commands.py
quickstart/core/: config.py  project.py
quickstart/templates/: __init__.py  base.py  python.py
quickstart/utils/: __init__.py  logging.py
tests/: __init__.py  test_cli.py  test_config.py  test_project.py
